--- a/composer.json
+++ b/composer.json
@@ -24,23 +24,24 @@
   "require": {
     "composer/installers": "~1.0"
   },
-    "require-dev": {
-        "cakephp/cakephp": "~3.0",
-        "phpunit/phpunit": "~4.7",
-        "loadsys/loadsys_codesniffer": "~3.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "LibRegistry\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "LibRegistry\\Test\\": "tests",
-            "TestApp\\": "tests/test_app/TestApp",
-            "TestPlugin\\": "tests/test_app/Plugin/TestPlugin/src"
-        }
-    },
+  "require-dev": {
+    "cakephp/cakephp": "~3.0",
+    "phpunit/phpunit": "~4.7",
+    "loadsys/loadsys_codesniffer": "~3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "LibRegistry\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Cake\\Test\\": "vendor/cakephp/cakephp/test",
+      "LibRegistry\\Test\\": "tests",
+      "TestApp\\": "tests/test_app/TestApp",
+      "TestPlugin\\": "tests/test_app/Plugin/TestPlugin/src"
+    }
+  },
   "extra": {
     "installer-name": "LibRegistry"
   }
