--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,13 @@
     "source": "https://github.com/loadsys/CakePHP-LibRegistry"
   },
   "require": {
-    "composer/installers": "~1.0"
+    "php": ">=5.4"
   },
   "require-dev": {
     "cakephp/cakephp": "~3.0",
     "phpunit/phpunit": "~4.7",
-    "loadsys/loadsys_codesniffer": "~3.0"
+    "loadsys/loadsys_codesniffer": "~3.0",
+    "satooshi/php-coveralls": "dev-master"
   },
   "autoload": {
     "psr-4": {
